[package]
name = "cbindgen"
version = "0.4.3"
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>",
           "Kartikaya Gupta <kats@mozilla.com>",
           "Ryan Hunt <rhunt@eqrion.net>"]
license = "MPL-2.0"
description = "A tool for generating C bindings to Rust code."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/eqrion/cbindgen/"
exclude = ["test.py", "tests/**"]

[badges]
travis-ci = { repository = "eqrion/cbindgen" }

[dependencies]
clap = "2"
log = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempdir = "0.3"
toml = "0.4"

[dependencies.syn]
version = "0.12.6"
features = ["extra-traits", "full"]

[[bin]]
name = "cbindgen"
path = "src/main.rs"
doc = false

[lib]
name = "cbindgen"
path = "src/lib.rs"

[replace]
"proc-macro2:0.2.1" = { git = "https://github.com/staktrace/rustc-ap-proc-macro2", branch = "rustc-ap-0.2.1" }
"quote:0.4.2" = { git = "https://github.com/staktrace/rustc-ap-quote", branch = "rustc-ap-0.4.2" }
"syn:0.12.10" = { git = "https://github.com/staktrace/rustc-ap-syn", branch = "rustc-ap-0.12.10" }
